--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-calculator-pair-prog",
+  "homepage": "https://Osman-Ozturk.github.io/React-Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "gh-pages": "^4.0.0",
     "mathjs": "^11.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,6 +15,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
