--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mathjs": "^11.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
