--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-calculator-pair-prog",
   "version": "0.1.0",
+  "homepage": "https://Osman-Ozturk.github.io/React-Calculator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
